แก้ไขหน้า ffc-lyouts

--- a/FAQ-ffc.html
+++ b/FAQ-ffc.html
@@ -1,5 +1,6 @@
 ---
 layout: ffc-layouts
 ---
-
+<div style="background-color:#98FB98;color:#228B22;padding:15px;">
 <h1>คำถามที่พบบ่อย</h1>
+</div>
