แก้ไข จัดหน้า index

--- a/download-ffc.html
+++ b/download-ffc.html
@@ -2,9 +2,8 @@
 layout: ffc-layouts
 ---
 
-<center>
-<h2>เอกสารดาวน์โหลด</h2>
-</center>
+<h1>เอกสารดาวน์โหลด</h1>
+
 <style>
 table {
     border-collapse: collapse;
@@ -16,7 +15,8 @@ th, td {
     padding: 8px;
 }
 
-tr:nth-child(even){background-color: #f2f2f2}
+tr:nth-child(even){background-color: #f2f2f2
+}
 
 th {
     background-color: #4CAF50;
@@ -47,43 +47,43 @@ th {
     <td>9</td>
   </tr>
   <tr>
-    <td>3</td>
+    <td>4</td>
     <td>คู่มือ</td>
     <td>9</td>
   </tr>
   <tr>
-    <td>3</td>
+    <td>5</td>
     <td>คู่มือ</td>
     <td>9</td>
   </tr>
   <tr>
-    <td>3</td>
+    <td>6</td>
     <td>คู่มือ</td>
     <td>9</td>
   </tr>
   <tr>
-    <td>3</td>
+    <td>7</td>
     <td>คู่มือ</td>
     <td>9</td>
   </tr>
 
   <tr>
-    <td>3</td>
+    <td>8</td>
     <td>คู่มือ</td>
     <td>9</td>
   </tr>
   <tr>
-    <td>3</td>
+    <td>9</td>
     <td>คู่มือ</td>
     <td>9</td>
   </tr>
   <tr>
-    <td>3</td>
+    <td>10</td>
     <td>คู่มือ</td>
     <td>9</td>
   </tr>
   <tr>
-    <td>3</td>
+    <td>11</td>
     <td>คู่มือ</td>
     <td>9</td>
   </tr>
