--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ layout: default-ffc
                 <a href="#"><img src="/img/ข่าว.png" alt="FFC.com" width="100" height="130"></a>
                 <br>
                 <br>
-                <a href="#"><img src="/img/รูปกิจกรรม.png" alt="FFC.com" width="100" height="130"> &nbsp;</a>
+                <a href="https://suppaluck.github.io/gallery-ffc.html"><img src="/img/รูปกิจกรรม.png" alt="FFC.com" width="100" height="130"> &nbsp;</a>
                 <a href="#"> <img src="/img/เทคนิคทางบ้าน.png" alt="FFC.com" width="100" height="130"></a>
             </center>
         </div>
