--- a/message-ffc.html
+++ b/message-ffc.html
@@ -1,5 +1,5 @@
 ---
-layout: ffc-layouts
+layout: icon-ffc-layouts
 ---
 <div style="background-color:#b3ffb3;color:#1a1aff;">
     <div class="row">
