แก้ไขและเพิ่มข้อมูลหน้าต่างๆ

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@ layout: default-ffc
         <div class="col-md-3">
             <center>
                 <br>
-                <a href="#"><img src="/img/แสดงพิกัดผู้ใช้.png" alt="FFC.com" width="100" height="130"> &nbsp;</a>
-                <a href="#"><img src="/img/ข่าว.png" alt="FFC.com" width="100" height="130"></a>
+                <a href="https://suppaluck.github.io/location-ffc.html"><img src="/img/แสดงพิกัดผู้ใช้.png" alt="FFC.com" width="100" height="130"> &nbsp;</a>
+                <a href="https://suppaluck.github.io/message-ffc.html"><img src="/img/ข่าว.png" alt="FFC.com" width="100" height="130"></a>
                 <br>
                 <br>
                 <a href="https://suppaluck.github.io/gallery-ffc.html"><img src="/img/รูปกิจกรรม.png" alt="FFC.com" width="100" height="130"> &nbsp;</a>
-                <a href="#"> <img src="/img/เทคนิคทางบ้าน.png" alt="FFC.com" width="100" height="130"></a>
+                <a href="https://suppaluck.github.io/technique-ffc.html"><img src="/img/เทคนิคทางบ้าน.png" alt="FFC.com" width="100" height="130"></a>
             </center>
         </div>
 
