แก้ไขหน้า index เพิ่มเติม

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ layout: default-ffc
         </a>
     </div>
 </div>
-<div style="background-color:#b3ffb3;color:white;">
+<div style="background-color:#b3ffb3;color:#000000;">
     <div class="row">
         <div class="col-md-3">
             <center>
