--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ layout: default-ffc
         <img class="img-responsive " src="/img/1.png" width="325" height="310">
     </div>
     <div class="col-sm-6 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
-        <h2 class="section-heading heading-pink" style="color:white;">Family Folder Collector </h2>
+        <h2 class="section-heading heading-pink">Family Folder Collector </h2>
         <p class="lead lead-dark" style="color:white;">
             โปรแกรมบันทึกข้อมูลสุขภาพครอบครัว (Family Folder Collector) หรือเราเรียกสั้นๆว่า FFC โดยโปรแกรมถูกออกแบบให้ใช้งานร่วมกับฐานข้อมูล โปรแกรมระบบงานโรงพยาบาลส่งเสริมสุขภาพตำบล และศูนย์สุขภาพชุมชน JHCISของศูนย์เทคโนโลยีสารสนเทศและการสื่อสาร สำนักงานปลัดกระทรวง
             สาธารณสุข เพื่ออำนวยความสะดวกให้เจ้าหน้าที่สาธารณสุข ที่พ.สต.นำไปใช้ เยี่ยมบ้าน คัดกรองโรค สำรวจพิกัดบ้าน สถานที่สำคัญ ในชุมชน ลดปัญหาการกรอกข้อมูลซ้ำซ้อนและส่งเสริมการทำงานเชิงรุกให้มีประสิทธิภาพมากยิ่งขึ้น
@@ -149,36 +149,63 @@ layout: default-ffc
             </div>
         </div>
     </div>
-  </div>
+</div>
 
-  <div id="showe" class="content-section-b trb-showe-bg">
-  <div class="content-section-c ">
-  <div class="container">
-      <h1>คุณสมบัติ</h1></center>
-<div class="row">
-<div class="col-sm-6 pull-right wow fadeInRightBig animated animated" style="visibility: visible;">
-  <img class="img-responsive " src="/img/FFC.jpg">
-</div>
-<div class="col-sm-6 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
-  <h2 class="section-heading heading-pink" style="color:white;">Family Folder Collector </h2>
-  <p class="lead lead-dark">
-    <ul>
-    <li>มีระบบการรักษาความปลอดภัยให้ฐานข้อมูลด้วยการเข้าและถอดรหัสลับก่อนใช้งานฐานข้อมูล เพื่อความปลอดภัยสูงสุดของฐานข้อมูล</li>
-    <li>มีระบบการยืนยันผู้ใช้ที่สามารถเข้าถึงฐานข้อมูลได้ เพิ่มความปลอดภัยอีกระดับ</li>
-    <li>ใช้งานร่วมกับโปรแกรมระบบงานโรงพยาบาลส่งเสริมสุขภาพตำบลและศูนย์สุขภาพชุมชน (JHCIS)</li>
-  <li>สามารถระบุตำแหน่งพิกัดหลังคาเรือนจากระบบ GPS หรือ AGPS อย่างอัตโนมัติได้</li>
-  <li>สามารถเพิ่ม แก้ไข ลบ ค้นหา ตำแหน่งพิกัดของหลังคาบ้านบนแผนที่ Google map ได้</li>
-    <li>สามารถดูข้อมูลสภาวะความเป็นโรคเรื้อรังของบุคคลในบ้านบนแผนที่ได้</li>
-    <li>สามารถสร้างผังเครือญาติ (Genogram) ในรูปแบบกราฟฟิก โดยมีจุดศูนย์กลางที่เจ้าบ้านได้ ๔ รุ่นอายุคน</li>
-    (หนึ่งรุ่นอายุคนก่อนเจ้าบ้าน สองรุ่นอายุคนหลังเจ้าบ้าน) จากฐานข้อมูลของโปรแกรม JHCIS ได้อย่างอัตโนมัติ
-  </ul>
-  </p>
-  <br>
+<div id="showe" class="content-section-b trb-showe-bg">
+    <div class="content-section-b">
+        <div class="container">
+            <h1>คุณสมบัติ</h1></center>
+            <div class="row">
+                <div class="col-sm-6 pull-right wow fadeInRightBig animated animated" style="visibility: visible;">
+                    <img class="img-responsive " src="/img/FFC.jpg">
+                </div>
+                <div class="col-sm-6 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
+                    <h2 class="section-heading heading-pink">Family Folder Collector </h2>
+                    <p class="lead lead-dark">
+                        <ul>
+                            <li>มีระบบการรักษาความปลอดภัยให้ฐานข้อมูลด้วยการเข้าและถอดรหัสลับก่อนใช้งานฐานข้อมูล เพื่อความปลอดภัยสูงสุดของฐานข้อมูล</li>
+                            <li>มีระบบการยืนยันผู้ใช้ที่สามารถเข้าถึงฐานข้อมูลได้ เพิ่มความปลอดภัยอีกระดับ</li>
+                            <li>ใช้งานร่วมกับโปรแกรมระบบงานโรงพยาบาลส่งเสริมสุขภาพตำบลและศูนย์สุขภาพชุมชน (JHCIS)</li>
+                            <li>สามารถระบุตำแหน่งพิกัดหลังคาเรือนจากระบบ GPS หรือ AGPS อย่างอัตโนมัติได้</li>
+                            <li>สามารถเพิ่ม แก้ไข ลบ ค้นหา ตำแหน่งพิกัดของหลังคาบ้านบนแผนที่ Google map ได้</li>
+                            <li>สามารถดูข้อมูลสภาวะความเป็นโรคเรื้อรังของบุคคลในบ้านบนแผนที่ได้</li>
+                            <li>สามารถสร้างผังเครือญาติ (Genogram) ในรูปแบบกราฟฟิก โดยมีจุดศูนย์กลางที่เจ้าบ้านได้ ๔ รุ่นอายุคน</li>
+                            (หนึ่งรุ่นอายุคนก่อนเจ้าบ้าน สองรุ่นอายุคนหลังเจ้าบ้าน) จากฐานข้อมูลของโปรแกรม JHCIS ได้อย่างอัตโนมัติ
+                        </ul>
+                    </p>
+                    <br>
 
+                </div>
+            </div>
+            <!-- /.container -->
+        </div>
+        <br>
+        <br>
+    </div>
+</div>
+<div id="video" class="content-section-b trb-video-bg">
+    <div class="content-section-b">
+        <div class="container">
+            <div class="row white">
+                <div class="col-md-6 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
+                    <h1>FFC Video </h1>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/DJceyu3Bg6c" frameborder="0" allowfullscreen></iframe>
+                </div>
+                <br>
+                <br>
+                <br>
+                <div class="col-md-6 pull-right wow fadeInRightBig animated animated" style="visibility: visible;">
+
+                  <p class="lead lead-dark">
+                     โดยโปรแกรมบันทึกสุขภาพครอบครัวบนแท็บเล็ต Android นี้ เริ่มใช้งานจริงเมื่อปี 2554 เพื่อทดแทนการจัดเก็บข้อมูลแฟ้มอนามัยครอบครัวแบบเก่า
+                     ที่เป็นเล่มรูปแบบกระดาษ ซึ่งมีปัญหาอุปสรรคคือ เสียพื้นที่จัดเก็บ ข้อมูลไม่ทันสมัย ไม่สามารถสืบค้น วิเคราะห์ข้อมูล
+                    และการกรอกข้อมูลซ้ำซ้อนยุ่งยาก จากการจดลงกระดาษแล้วต้องมาพิมพ์บนคอมพิวเตอร์อีกที</p>
 </div>
 </div>
-<!-- /.container -->
-</div>
-<br>
-<br>
-</div></div>
+</div></div></div><br><br>
+<div id="video" class="content-section-b trb-video-bg">
+    <div class="content-section-b">
+        <div class="container">
+            <div class="row white">
+                <div class="col-md-6 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
+                  
