--- a/download-ffc.html
+++ b/download-ffc.html
@@ -3,7 +3,8 @@ layout: ffc-layouts
 ---
 
 <h1>เอกสารดาวน์โหลด</h1>
-
+<div class="col-md-12">
+  
 <style>
 table {
     border-collapse: collapse;
