--- a/index.html
+++ b/index.html
@@ -172,7 +172,11 @@ layout: default-ffc
                             <li>สามารถสร้างผังเครือญาติ (Genogram) ในรูปแบบกราฟฟิก โดยมีจุดศูนย์กลางที่เจ้าบ้านได้ ๔ รุ่นอายุคน</li>
                             (หนึ่งรุ่นอายุคนก่อนเจ้าบ้าน สองรุ่นอายุคนหลังเจ้าบ้าน) จากฐานข้อมูลของโปรแกรม JHCIS ได้อย่างอัตโนมัติ
                         </ul>
+
+                        <a href="https://suppaluck.github.io/property-ffc">
+                          <p>อ่านต่อ >>>
                     </p>
+                  </a>
                     <br>
 
                 </div>
@@ -190,22 +194,27 @@ layout: default-ffc
                 <div class="col-md-6 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
                     <h1>FFC Video </h1>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/DJceyu3Bg6c" frameborder="0" allowfullscreen></iframe>
+                    <br>
+                    <br>
+                    <br>
                 </div>
                 <br>
                 <br>
                 <br>
                 <div class="col-md-6 pull-right wow fadeInRightBig animated animated" style="visibility: visible;">
 
-                  <p class="lead lead-dark">
-                     โดยโปรแกรมบันทึกสุขภาพครอบครัวบนแท็บเล็ต Android นี้ เริ่มใช้งานจริงเมื่อปี 2554 เพื่อทดแทนการจัดเก็บข้อมูลแฟ้มอนามัยครอบครัวแบบเก่า
-                     ที่เป็นเล่มรูปแบบกระดาษ ซึ่งมีปัญหาอุปสรรคคือ เสียพื้นที่จัดเก็บ ข้อมูลไม่ทันสมัย ไม่สามารถสืบค้น วิเคราะห์ข้อมูล
-                    และการกรอกข้อมูลซ้ำซ้อนยุ่งยาก จากการจดลงกระดาษแล้วต้องมาพิมพ์บนคอมพิวเตอร์อีกที</p>
-</div>
-</div>
-</div></div></div><br><br>
+                    <p class="lead lead-dark">
+                        โดยโปรแกรมบันทึกสุขภาพครอบครัวบนแท็บเล็ต Android นี้ เริ่มใช้งานจริงเมื่อปี 2554 เพื่อทดแทนการจัดเก็บข้อมูลแฟ้มอนามัยครอบครัวแบบเก่า ที่เป็นเล่มรูปแบบกระดาษ ซึ่งมีปัญหาอุปสรรคคือ เสียพื้นที่จัดเก็บ ข้อมูลไม่ทันสมัย ไม่สามารถสืบค้น วิเคราะห์ข้อมูล และการกรอกข้อมูลซ้ำซ้อนยุ่งยาก
+                        จากการจดลงกระดาษแล้วต้องมาพิมพ์บนคอมพิวเตอร์อีกที</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div><br><br>
 <div id="video" class="content-section-b trb-video-bg">
     <div class="content-section-b">
         <div class="container">
             <div class="row white">
                 <div class="col-md-6 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
-                  
+
+                   
