แก้ไขเพิ่มเติมหน้าหลัก

--- a/index.html
+++ b/index.html
@@ -204,7 +204,8 @@ layout: default-ffc
                 <div class="col-md-6 pull-right wow fadeInRightBig animated animated" style="visibility: visible;">
 
                     <p class="lead lead-dark">
-                        โดยโปรแกรมบันทึกสุขภาพครอบครัวบนแท็บเล็ต Android นี้ เริ่มใช้งานจริงเมื่อปี 2554 เพื่อทดแทนการจัดเก็บข้อมูลแฟ้มอนามัยครอบครัวแบบเก่า ที่เป็นเล่มรูปแบบกระดาษ ซึ่งมีปัญหาอุปสรรคคือ เสียพื้นที่จัดเก็บ ข้อมูลไม่ทันสมัย ไม่สามารถสืบค้น วิเคราะห์ข้อมูล และการกรอกข้อมูลซ้ำซ้อนยุ่งยาก
+                        โดยโปรแกรมบันทึกสุขภาพครอบครัวบนแท็บเล็ต Android นี้ เริ่มใช้งานจริงเมื่อปี 2554 เพื่อทดแทนการจัดเก็บข้อมูลแฟ้มอนามัยครอบครัวแบบเก่า
+                        ที่เป็นเล่มรูปแบบกระดาษ ซึ่งมีปัญหาอุปสรรคคือ เสียพื้นที่จัดเก็บ ข้อมูลไม่ทันสมัย ไม่สามารถสืบค้น วิเคราะห์ข้อมูล และการกรอกข้อมูลซ้ำซ้อนยุ่งยาก
                         จากการจดลงกระดาษแล้วต้องมาพิมพ์บนคอมพิวเตอร์อีกที</p>
                 </div>
             </div>
@@ -216,5 +217,3 @@ layout: default-ffc
         <div class="container">
             <div class="row white">
                 <div class="col-md-6 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
-
-                   
