แก้ไขหน้า FAQ และก็หน้าดาวน์โหลด

--- a/download-ffc.html
+++ b/download-ffc.html
@@ -3,8 +3,10 @@ layout: ffc-layouts
 ---
 
 <h1>เอกสารดาวน์โหลด</h1>
+<div class="container">
+    <div class="row">
 <div class="col-md-12">
-  
+
 <style>
 table {
     border-collapse: collapse;
@@ -34,22 +36,27 @@ th {
   </tr>
   <tr>
     <td>1</td>
-    <td>เอกสาร</td>
+    <td>
+    <a href="http://www.dms.moph.go.th/dmsweb/publish/publish07102016101008.rar" target="_blank">
+      คู่มือการใช้งาน</a></td>
     <td>3</td>
   </tr>
   <tr>
     <td>2</td>
-    <td>การใช้งาน</td>
+    <td><a href="http://www.dms.moph.go.th/dmsweb/publish/publish07102016101008.rar" target="_blank">
+      การใช้งาน</td>
     <td>5</td>
   </tr>
   <tr>
     <td>3</td>
-    <td>คู่มือ</td>
+    <td><a href="http://www.dms.moph.go.th/dmsweb/publish/publish07102016101008.rar" target="_blank">
+      ประชาชาติธุรกิจ FFC Plus</td>
     <td>9</td>
   </tr>
   <tr>
     <td>4</td>
-    <td>คู่มือ</td>
+    <td>
+      <a href="http://www.dms.moph.go.th/dmsweb/publish/publish07102016101008.rar" target="_blank"></td>
     <td>9</td>
   </tr>
   <tr>
@@ -90,3 +97,5 @@ th {
   </tr>
 </table>
 </center>
+</div>
+</div>
