--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ layout: default-ffc
         <!-- /.col-lg-4 -->
 
         <div class="col-sm-3 wow fadeInDown text-center animated animated" style="visibility: visible;">
-            <a href="#" class="btn btn-info btn-lg">
+            <a href="" class="btn btn-info btn-lg">
                 <h1><span class="glyphicon glyphicon-picture"></span></h1>
                 <h4>  รูปภาพกิจกรรม  </h4>
             </a>
@@ -212,8 +212,3 @@ layout: default-ffc
         </div>
     </div>
 </div><br><br>
-<div id="video" class="content-section-b trb-video-bg">
-    <div class="content-section-b">
-        <div class="container">
-            <div class="row white">
-                <div class="col-md-6 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
