--- a/technique-ffc.html
+++ b/technique-ffc.html
@@ -1,6 +1,9 @@
 ---
-layout: icon-ffc-layouts
+layout: ffc-layouts
 ---
+
+
+
 
   <h2>เทคนิคจากทางบ้าน</h2>
   <h4>หัวเรื่อง: การใช้งานแบบวิธีลัด</h4>
