--- a/message-ffc.html
+++ b/message-ffc.html
@@ -1,7 +1,7 @@
 ---
-layout: icon-ffc-layouts
+layout: ffc-layouts
 ---
-<div style="background-color:#b3ffb3;color:#1a1aff;">
+
     <div class="row">
         <div class="col-md-6">
 
