--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ layout: default-ffc
 <br>
 <br>
 <center>
+  <div id="home" class="container">
     <div class="row">
         <div class="col-md-12">
             <h2>Family Folder Collector </h2>
@@ -62,7 +63,7 @@ layout: default-ffc
             <div class="row">
                 <div class="col-sm-3 wow fadeInDown text-center animated animated" style="visibility: visible;">
 
-                    <a href="#" class="btn btn-info btn-lg">
+                    <a href="https://suppaluck.github.io/location-ffc.html" class="btn btn-info btn-lg">
                         <h1><span class="glyphicon glyphicon-map-marker"></span></h1>
                         <h4>แสดงพิกัดผู้ใช้</h4>
             </a>
@@ -79,7 +80,7 @@ layout: default-ffc
         </div>
         <!-- /.col-lg-4 -->
         <div class="col-sm-3 wow fadeInDown text-center animated animated" style="visibility: visible;">
-            <a href="#" class="btn btn-info btn-lg">
+            <a href="https://suppaluck.github.io/message-ffc.html" class="btn btn-info btn-lg">
                 <h1><span class="glyphicon glyphicon-list-alt"></span></h1>
                 <h4>ข่าวและกิจกรรม</h4>
             </a>
@@ -89,7 +90,7 @@ layout: default-ffc
 
         <div class="col-sm-3  wow fadeInDown text-center animated animated" style="visibility: visible;">
 
-            <a href="#" class="btn btn-info btn-lg">
+            <a href="https://suppaluck.github.io/technique-ffc.html" class="btn btn-info btn-lg">
                 <h1>  <span class="glyphicon glyphicon-home"></span></h1>
                 <h4>เทคนิคทางบ้าน</h4>
             </a>
@@ -123,7 +124,8 @@ layout: default-ffc
         <br>
         <p>
             <a class="" href="https://play.google.com/store/apps/details?id=th.in.ffc" target="_blank" role="button">
-                <img style="height: 64px;" src="/img/Google-play.png"></a>
+                <img style="height: 64px;" src="/img/Google-Play.png"> 
+              </a>
             <!--<a class="btn btn-embossed btn-info" href="#" role="button">Visit Website</a>--></p>
     </div>
 </div>
