--- a/FAQ-ffc.html
+++ b/FAQ-ffc.html
@@ -1,7 +1,12 @@
 ---
 layout: ffc-layouts
 ---
+
 <div class="container">
+  <div class="row">
+    <br>
+    <br>
+      <div class="col-md-12">
   <h2>คำถามที่พบบ่อย</h2>
   <div class="panel panel-default">
     <div class="panel-heading">FFCคืออะไร???</div>
@@ -21,5 +26,6 @@ layout: ffc-layouts
     <div class="panel-heading">ทำไมต้องใช้FFC</div>
     <div class="panel-body">เพราะเป็นโปรแกรมที่อำนวยความสะดวกในการตรวจสุขภาพเพื่อรักษาได้ทันและได้ทราบว่าเราควรปฎิบัติและดูแลตัวเองอย่างไรต่อไป</div>
   </div>
-
+</div>
+</div>
 </div>
