--- a/index.html
+++ b/index.html
@@ -1,58 +1,36 @@
 ---
 layout: default-ffc
 ---
+
 <div class="row">
     <div class="col-md-12">
-        <div style="background-img:https://pixabay.com/static/uploads/photo/2016/01/19/21/31/background-1150511_960_720.jpg; color:#1a1aff;">
-            <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                <!-- Indicators -->
-                <ol class="carousel-indicators">
-                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#myCarousel" data-slide-to="1"></li>
-                    <li data-target="#myCarousel" data-slide-to="2"></li>
-                    <li data-target="#myCarousel" data-slide-to="3"></li>
-                </ol>
+      <div class="intro-header">
+            <div class="col-xs-12 text-center abcen1">
+              <br>
+              <br>
+              <br>
+                <h1 class="h1_home wow fadeIn animated animated" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s;">Family Folder Collector</h1>
+                <h3 class="h3_home wow fadeIn animated animated" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s;">FFCบริการถึงหน้าบ้าน เข้าถึงทุกครอบครัว ใส่ใจสุขภาพในชุมชน</h3>
 
-                <!-- Wrapper for slides -->
-                <div class="carousel-inner" role="listbox">
-                    <div class="item active">
-                        <img src="http://www.nectec.or.th/research/statichtml/images/ffc-family-folder-collector/pic02.jpg" alt="ffc.com" width="2500" height="880">
-                    </div>
-
-                    <div class="item">
-                        <img src="https://scontent.fbkk10-1.fna.fbcdn.net/v/t1.0-9/988470_703200253052374_5129269531060066108_n.jpg?oh=67ca92311a2dd0b0b763367f2da28124&oe=586CDC34" width="2500" height="880">
-                    </div>
-                    <div class="item">
-                        <img src="https://scontent.fbkk10-1.fna.fbcdn.net/v/t1.0-9/1506780_821767051195693_6688376549248490382_n.jpg?oh=7e86308954824cc1cd7e8db3a444c904&oe=58A1CD5F" width="2500" height="880">
-                    </div>
-                    <div class="item">
-                        <img src="https://scontent.fbkk10-1.fna.fbcdn.net/v/t34.0-12/10944858_10205696812088436_1296782690_n.jpg?oh=aca8dba8f671f4e1bcf83264fb2ddfde&oe=57FFB956" width="2500" height="880">
-                    </div>
-                </div>
-
-                <!-- Left and right controls -->
-                <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
             </div>
+            <!-- /.container -->
+
         </div>
-    </div>
+<br>
+<br>
+<br>
+</div>
 </div>
 <br>
 <br>
 <center>
-  <div id="home" class="container">
-    <div class="row">
-        <div class="col-md-12">
-          <br>
-          <br>
-            <h2>Family Folder Collector </h2>
-            <h4>โปรแกรมบันทึกข้อมูลสุขภาพครอบครัวแบบพกพา</h>
+    <div id="home" class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <br>
+                <br>
+                <h2>Family Folder Collector </h2>
+                <h4>โปรแกรมบันทึกข้อมูลสุขภาพครอบครัวแบบพกพา</h>
             <br>
           </div>
         </div>
@@ -68,39 +46,39 @@ layout: default-ffc
                     <a href="https://suppaluck.github.io/location-ffc.html" class="btn btn-info btn-lg">
                         <h1><span class="glyphicon glyphicon-map-marker"></span></h1>
                         <h4>แสดงพิกัดผู้ใช้</h4>
-            </a>
-            <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
-        </div>
-        <!-- /.col-lg-4 -->
+                </a>
+                <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
+            </div>
+            <!-- /.col-lg-4 -->
 
-        <div class="col-sm-3 wow fadeInDown text-center animated animated" style="visibility: visible;">
-            <a href="" class="btn btn-info btn-lg">
-                <h1><span class="glyphicon glyphicon-picture"></span></h1>
-                <h4>  รูปภาพกิจกรรม  </h4>
-            </a>
-            <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
-        </div>
-        <!-- /.col-lg-4 -->
-        <div class="col-sm-3 wow fadeInDown text-center animated animated" style="visibility: visible;">
-            <a href="https://suppaluck.github.io/message-ffc.html" class="btn btn-info btn-lg">
-                <h1><span class="glyphicon glyphicon-list-alt"></span></h1>
-                <h4>ข่าวและกิจกรรม</h4>
-            </a>
-            <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
-        </div>
-        <!-- /.col-lg-4 -->
+            <div class="col-sm-3 wow fadeInDown text-center animated animated" style="visibility: visible;">
+                <a href="" class="btn btn-info btn-lg">
+                    <h1><span class="glyphicon glyphicon-picture"></span></h1>
+                    <h4>  รูปภาพกิจกรรม  </h4>
+                </a>
+                <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
+            </div>
+            <!-- /.col-lg-4 -->
+            <div class="col-sm-3 wow fadeInDown text-center animated animated" style="visibility: visible;">
+                <a href="https://suppaluck.github.io/message-ffc.html" class="btn btn-info btn-lg">
+                    <h1><span class="glyphicon glyphicon-list-alt"></span></h1>
+                    <h4>ข่าวและกิจกรรม</h4>
+                </a>
+                <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
+            </div>
+            <!-- /.col-lg-4 -->
 
-        <div class="col-sm-3  wow fadeInDown text-center animated animated" style="visibility: visible;">
+            <div class="col-sm-3  wow fadeInDown text-center animated animated" style="visibility: visible;">
 
-            <a href="https://suppaluck.github.io/technique-ffc.html" class="btn btn-info btn-lg">
-                <h1>  <span class="glyphicon glyphicon-home"></span></h1>
-                <h4>เทคนิคทางบ้าน</h4>
-            </a>
-            <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
+                <a href="https://suppaluck.github.io/technique-ffc.html" class="btn btn-info btn-lg">
+                    <h1>  <span class="glyphicon glyphicon-home"></span></h1>
+                    <h4>เทคนิคทางบ้าน</h4>
+                </a>
+                <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
+            </div>
+            <!-- /.col-lg-4 -->
+
         </div>
-        <!-- /.col-lg-4 -->
-
-    </div>
     </div>
 
     </div>
@@ -119,7 +97,7 @@ layout: default-ffc
     </div>
     <div class="col-sm-6 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
         <h2 class="section-heading heading-pink">Family Folder Collector </h2>
-        <p class="lead lead-dark" style="color:white;">
+        <p class="lead lead-dark" style="color:#000000;">
             โปรแกรมบันทึกข้อมูลสุขภาพครอบครัว (Family Folder Collector) หรือเราเรียกสั้นๆว่า FFC โดยโปรแกรมถูกออกแบบให้ใช้งานร่วมกับฐานข้อมูล โปรแกรมระบบงานโรงพยาบาลส่งเสริมสุขภาพตำบล และศูนย์สุขภาพชุมชน JHCISของศูนย์เทคโนโลยีสารสนเทศและการสื่อสาร สำนักงานปลัดกระทรวง
             สาธารณสุข เพื่ออำนวยความสะดวกให้เจ้าหน้าที่สาธารณสุข ที่พ.สต.นำไปใช้ เยี่ยมบ้าน คัดกรองโรค สำรวจพิกัดบ้าน สถานที่สำคัญ ในชุมชน ลดปัญหาการกรอกข้อมูลซ้ำซ้อนและส่งเสริมการทำงานเชิงรุกให้มีประสิทธิภาพมากยิ่งขึ้น
         </p>
@@ -127,7 +105,7 @@ layout: default-ffc
         <p>
             <a class="" href="https://play.google.com/store/apps/details?id=th.in.ffc" target="_blank" role="button">
                 <img style="height: 64px;" src="/img/Google-Play.png">
-              </a>
+            </a>
             <!--<a class="btn btn-embossed btn-info" href="#" role="button">Visit Website</a>--></p>
     </div>
 </div>
@@ -135,8 +113,8 @@ layout: default-ffc
 <!-- /.container -->
 </div>
 <div id="report" class="content-section-a trb-report-bg">
-<br>
-<br>
+    <br>
+    <br>
     <div class="container">
         <div class="row">
             <div class="col-sm-6 wow fadeInLeftBig animated animated" style="visibility: visible; animation-name: fadeInLeftBig;">
@@ -157,16 +135,16 @@ layout: default-ffc
 <div id="showe" class="content-section-b trb-showe-bg">
     <div class="content-section-b">
         <div class="container">
-          <br>
-          <br>
+            <br>
+            <br>
             <div class="row">
-            <h1>คุณสมบัติ</h1></center>
+                <h1>คุณสมบัติ</h1></center>
 
                 <div class="col-sm-6 pull-right wow fadeInRightBig animated animated" style="visibility: visible;">
                     <img class="img-responsive " src="/img/FFC.jpg">
                 </div>
                 <div class="col-sm-6 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
-                    <p class="lead lead-dark">
+                    <p class="lead lead-dark" style="color:white;">
                         <ul>
                             <li>มีระบบการรักษาความปลอดภัยให้ฐานข้อมูลด้วยการเข้าและถอดรหัสลับก่อนใช้งานฐานข้อมูล เพื่อความปลอดภัยสูงสุดของฐานข้อมูล</li>
                             <li>มีระบบการยืนยันผู้ใช้ที่สามารถเข้าถึงฐานข้อมูลได้ เพิ่มความปลอดภัยอีกระดับ</li>
@@ -179,10 +157,10 @@ layout: default-ffc
                         </ul>
 
                         <a href="https://suppaluck.github.io/property-ffc">
-                          <p>อ่านต่อ >>>
+                            <p>อ่านต่อ >>>
+                            </p>
+                        </a>
                     </p>
-                  </a>
-                </p>
                     <br>
 
                 </div>
@@ -211,9 +189,9 @@ layout: default-ffc
                 <div class="col-md-6 pull-right wow fadeInRightBig animated animated" style="visibility: visible;">
 
                     <p class="lead lead-dark">
-                        โดยโปรแกรมบันทึกสุขภาพครอบครัวบนแท็บเล็ต Android นี้ เริ่มใช้งานจริงเมื่อปี 2554 เพื่อทดแทนการจัดเก็บข้อมูลแฟ้มอนามัยครอบครัวแบบเก่า
-                        ที่เป็นเล่มรูปแบบกระดาษ ซึ่งมีปัญหาอุปสรรคคือ เสียพื้นที่จัดเก็บ ข้อมูลไม่ทันสมัย ไม่สามารถสืบค้น วิเคราะห์ข้อมูล และการกรอกข้อมูลซ้ำซ้อนยุ่งยาก
-                        จากการจดลงกระดาษแล้วต้องมาพิมพ์บนคอมพิวเตอร์อีกที</p>
+                        โดยโปรแกรมบันทึกสุขภาพครอบครัวบนแท็บเล็ต Android นี้ เริ่มใช้งานจริงเมื่อปี 2554 เพื่อทดแทนการจัดเก็บข้อมูลแฟ้มอนามัยครอบครัวแบบเก่า ที่เป็นเล่มรูปแบบกระดาษ ซึ่งมีปัญหาอุปสรรคคือ เสียพื้นที่จัดเก็บ ข้อมูลไม่ทันสมัย ไม่สามารถสืบค้น วิเคราะห์ข้อมูล และการกรอกข้อมูลซ้ำซ้อนยุ่งยาก
+                        จากการจดลงกระดาษแล้วต้องมาพิมพ์บนคอมพิวเตอร์อีกที
+                    </p>
                 </div>
             </div>
         </div>
