--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@ layout: default-ffc
 
 <div class="row">
     <div class="col-md-12">
-      <div class="intro-header">
+        <div class="intro-header">
             <div class="col-xs-12 text-center abcen1">
-              <br>
-              <br>
-              <br>
+                <br>
+                <br>
+                <br>
                 <h1 class="h1_home wow fadeIn animated animated" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s;">Family Folder Collector</h1>
                 <h3 class="h3_home wow fadeIn animated animated" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s;">FFCบริการถึงหน้าบ้าน เข้าถึงทุกครอบครัว ใส่ใจสุขภาพในชุมชน</h3>
 
@@ -16,13 +16,14 @@ layout: default-ffc
             <!-- /.container -->
 
         </div>
-<br>
-<br>
-<br>
+        <br>
+        <br>
+        <br>
+    </div>
 </div>
-</div>
 <br>
 <br>
+
 <center>
     <div id="home" class="container">
         <div class="row">
@@ -30,87 +31,88 @@ layout: default-ffc
                 <br>
                 <br>
                 <h2>Family Folder Collector </h2>
-                <h4>โปรแกรมบันทึกข้อมูลสุขภาพครอบครัวแบบพกพา</h>
-            <br>
-          </div>
+                <h4>โปรแกรมบันทึกข้อมูลสุขภาพครอบครัวแบบพกพา</h4>
+                <br>
+            </div>
         </div>
-      </center>
-      <br>
-      <br>
-      <br>
-      <br>
-      <div class="container">
-            <div class="row">
-                <div class="col-sm-3 wow fadeInDown text-center animated animated" style="visibility: visible;">
+</center>
+<br>
+<br>
+<br>
+<br>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-3 wow fadeInDown text-center animated animated" style="visibility: visible;">
 
-                    <a href="https://suppaluck.github.io/location-ffc.html" class="btn btn-info btn-lg">
-                        <h1><span class="glyphicon glyphicon-map-marker"></span></h1>
-                        <h4>แสดงพิกัดผู้ใช้</h4>
+                <a href="https://suppaluck.github.io/location-ffc.html" class="btn btn-info btn-lg">
+                    <span class="glyphicon glyphicon-map-marker text-big red"></span>
+                    <h4>แสดงพิกัดผู้ใช้</h4>
                 </a>
-                <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
-            </div>
-            <!-- /.col-lg-4 -->
 
-            <div class="col-sm-3 wow fadeInDown text-center animated animated" style="visibility: visible;">
-                <a href="" class="btn btn-info btn-lg">
-                    <h1><span class="glyphicon glyphicon-picture"></span></h1>
-                    <h4>  รูปภาพกิจกรรม  </h4>
-                </a>
-                <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
-            </div>
-            <!-- /.col-lg-4 -->
-            <div class="col-sm-3 wow fadeInDown text-center animated animated" style="visibility: visible;">
-                <a href="https://suppaluck.github.io/message-ffc.html" class="btn btn-info btn-lg">
-                    <h1><span class="glyphicon glyphicon-list-alt"></span></h1>
-                    <h4>ข่าวและกิจกรรม</h4>
-                </a>
-                <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
-            </div>
-            <!-- /.col-lg-4 -->
-
-            <div class="col-sm-3  wow fadeInDown text-center animated animated" style="visibility: visible;">
-
-                <a href="https://suppaluck.github.io/technique-ffc.html" class="btn btn-info btn-lg">
-                    <h1>  <span class="glyphicon glyphicon-home"></span></h1>
-                    <h4>เทคนิคทางบ้าน</h4>
-                </a>
-                <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
-            </div>
-            <!-- /.col-lg-4 -->
-
+            <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
         </div>
-    </div>
+        <!-- /.col-lg-4 -->
 
-    </div>
-    </div>
-    <br>
-    <br>
-    <hr>
-    <div id="survey" class="content-section-a trb-survey-bg">
-
-        <div class="container">
-            <h1>คืออะไร???</h1></center>
-<div class="row">
-    <div class="col-sm-6 pull-right wow fadeInRightBig animated animated" style="visibility: visible;">
-        <img class="img-responsive " src="/img/1.png" width="325" height="310">
-        <img class="img-responsive " src="/img/1.png" width="325" height="310">
-    </div>
-    <div class="col-sm-6 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
-        <h2 class="section-heading heading-pink">Family Folder Collector </h2>
-        <p class="lead lead-dark" style="color:#000000;">
-            โปรแกรมบันทึกข้อมูลสุขภาพครอบครัว (Family Folder Collector) หรือเราเรียกสั้นๆว่า FFC โดยโปรแกรมถูกออกแบบให้ใช้งานร่วมกับฐานข้อมูล โปรแกรมระบบงานโรงพยาบาลส่งเสริมสุขภาพตำบล และศูนย์สุขภาพชุมชน JHCISของศูนย์เทคโนโลยีสารสนเทศและการสื่อสาร สำนักงานปลัดกระทรวง
-            สาธารณสุข เพื่ออำนวยความสะดวกให้เจ้าหน้าที่สาธารณสุข ที่พ.สต.นำไปใช้ เยี่ยมบ้าน คัดกรองโรค สำรวจพิกัดบ้าน สถานที่สำคัญ ในชุมชน ลดปัญหาการกรอกข้อมูลซ้ำซ้อนและส่งเสริมการทำงานเชิงรุกให้มีประสิทธิภาพมากยิ่งขึ้น
-        </p>
-        <br>
-        <p>
-            <a class="" href="https://play.google.com/store/apps/details?id=th.in.ffc" target="_blank" role="button">
-                <img style="height: 64px;" src="/img/Google-Play.png">
+        <div class="col-sm-3 wow fadeInDown text-center animated animated" style="visibility: visible;">
+            <a href="" class="btn btn-info btn-lg">
+                <h1><span class="glyphicon glyphicon-picture"></span></h1>
+                <h4>  รูปภาพกิจกรรม  </h4>
             </a>
-            <!--<a class="btn btn-embossed btn-info" href="#" role="button">Visit Website</a>--></p>
+            <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
+        </div>
+        <!-- /.col-lg-4 -->
+        <div class="col-sm-3 wow fadeInDown text-center animated animated" style="visibility: visible;">
+            <a href="https://suppaluck.github.io/message-ffc.html" class="btn btn-info btn-lg">
+                <h3><span class="glyphicon glyphicon-list-alt"></span></h3>
+                <h4>ข่าวและกิจกรรม</h4>
+            </a>
+            <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
+        </div>
+        <!-- /.col-lg-4 -->
+
+        <div class="col-sm-3  wow fadeInDown text-center animated animated" style="visibility: visible;">
+
+            <a href="https://suppaluck.github.io/technique-ffc.html" class="btn btn-info btn-lg">
+                <h1>  <span class="glyphicon glyphicon-home"></span></h1>
+                <h4>เทคนิคทางบ้าน</h4>
+            </a>
+            <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
+        </div>
+        <!-- /.col-lg-4 -->
+
     </div>
 </div>
+
 </div>
-<!-- /.container -->
+</div>
+<br>
+<br>
+<hr>
+<div id="survey" class="content-section-a trb-survey-bg">
+
+    <div class="container">
+        <h2>คืออะไร???</h2></center>
+        <div class="row">
+            <div class="col-sm-6 pull-right wow fadeInRightBig animated animated" style="visibility: visible;">
+                <img class="img-responsive " src="/img/1.png" width="325" height="310">
+                <img class="img-responsive " src="/img/1.png" width="325" height="310">
+            </div>
+            <div class="col-sm-6 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
+                <h2 class="section-heading heading-pink">Family Folder Collector </h2>
+                <p class="lead lead-dark" style="color:#000000;">
+                    โปรแกรมบันทึกข้อมูลสุขภาพครอบครัว (Family Folder Collector) หรือเราเรียกสั้นๆว่า FFC โดยโปรแกรมถูกออกแบบให้ใช้งานร่วมกับฐานข้อมูล โปรแกรมระบบงานโรงพยาบาลส่งเสริมสุขภาพตำบล และศูนย์สุขภาพชุมชน JHCISของศูนย์เทคโนโลยีสารสนเทศและการสื่อสาร สำนักงานปลัดกระทรวง
+                    สาธารณสุข เพื่ออำนวยความสะดวกให้เจ้าหน้าที่สาธารณสุข ที่พ.สต.นำไปใช้ เยี่ยมบ้าน คัดกรองโรค สำรวจพิกัดบ้าน สถานที่สำคัญ ในชุมชน ลดปัญหาการกรอกข้อมูลซ้ำซ้อนและส่งเสริมการทำงานเชิงรุกให้มีประสิทธิภาพมากยิ่งขึ้น
+                </p>
+                <br>
+                <p>
+                    <a class="" href="https://play.google.com/store/apps/details?id=th.in.ffc" target="_blank" role="button">
+                        <img style="height: 64px;" src="/img/Google-Play.png">
+                    </a>
+                    <!--<a class="btn btn-embossed btn-info" href="#" role="button">Visit Website</a>--></p>
+            </div>
+        </div>
+    </div>
+    <!-- /.container -->
 </div>
 <div id="report" class="content-section-a trb-report-bg">
     <br>
@@ -122,7 +124,7 @@ layout: default-ffc
             </div>
 
             <div class="col-sm-6 wow fadeInRightBig animated animated" data-animation-delay="200" style="visibility: visible; animation-name: fadeInRightBig;">
-                <h1 class="section-heading heading-green">ใครใช้?</h1>
+                <h2 class="section-heading heading-green">ใครใช้?</h2>
                 <br>
                 <p class="lead">
                     ผู้ใช้แอพ FFC Plus นี้ สำหรับเจ้าหน้าที่ทางด้านสาธารณะสุขที่ทำงานอยู่ตามสถานีอนามัย โรงพยาบาลส่งเสริมสุขภาพตำบล (รพ.สต.)ที่ใช้งานโปรแกรม JHCIS อยู่เท่านั้น
@@ -138,7 +140,7 @@ layout: default-ffc
             <br>
             <br>
             <div class="row">
-                <h1>คุณสมบัติ</h1></center>
+                <h2>คุณสมบัติ</h2></center>
 
                 <div class="col-sm-6 pull-right wow fadeInRightBig animated animated" style="visibility: visible;">
                     <img class="img-responsive " src="/img/FFC.jpg">
@@ -177,7 +179,7 @@ layout: default-ffc
         <div class="container">
             <div class="row white">
                 <div class="col-md-6 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
-                    <h1>FFC Video </h1>
+                    <h2>FFC Video </h2>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/DJceyu3Bg6c" frameborder="0" allowfullscreen></iframe>
                     <br>
                     <br>
