--- a/index.html
+++ b/index.html
@@ -9,20 +9,16 @@ layout: default-ffc
                 <br>
                 <br>
                 <br>
-                <h1 class="h1_home wow fadeIn animated animated" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s;">Family Folder Collector</h1>
-                <h3 class="h3_home wow fadeIn animated animated" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s;">FFCบริการถึงหน้าบ้าน เข้าถึงทุกครอบครัว ใส่ใจสุขภาพในชุมชน</h3>
+                <h1>Family Folder CollectorFFCบริการถึงหน้าบ้าน เข้าถึงทุกครอบครัว ใส่ใจสุขภาพในชุมชน</h1>
+                <h3>Family Folder Collector</h3>
 
             </div>
             <!-- /.container -->
 
         </div>
-        <br>
-        <br>
-        <br>
+
     </div>
 </div>
-<br>
-<br>
 
 <center>
     <div id="home" class="container">
@@ -44,10 +40,10 @@ layout: default-ffc
     <div class="row">
         <div class="col-sm-3 wow fadeInDown text-center animated animated" style="visibility: visible;">
 
-                <a href="https://suppaluck.github.io/location-ffc.html" class="btn btn-info btn-lg">
-                    <span class="glyphicon glyphicon-map-marker text-big red"></span>
-                    <h4>แสดงพิกัดผู้ใช้</h4>
-                </a>
+            <a href="https://suppaluck.github.io/location-ffc.html" class="btn btn-info btn-lg">
+                <span class="glyphicon glyphicon-map-marker text-big red"></span>
+                <h4>แสดงพิกัดผู้ใช้</h4>
+            </a>
 
             <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
         </div>
@@ -55,7 +51,7 @@ layout: default-ffc
 
         <div class="col-sm-3 wow fadeInDown text-center animated animated" style="visibility: visible;">
             <a href="" class="btn btn-info btn-lg">
-                <h1><span class="glyphicon glyphicon-picture"></span></h1>
+                <span class="glyphicon glyphicon-picture text-big Pink"></span>
                 <h4>  รูปภาพกิจกรรม  </h4>
             </a>
             <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
@@ -63,7 +59,7 @@ layout: default-ffc
         <!-- /.col-lg-4 -->
         <div class="col-sm-3 wow fadeInDown text-center animated animated" style="visibility: visible;">
             <a href="https://suppaluck.github.io/message-ffc.html" class="btn btn-info btn-lg">
-                <h3><span class="glyphicon glyphicon-list-alt"></span></h3>
+                <span class="glyphicon glyphicon-list-alt text-big Orange"></span>
                 <h4>ข่าวและกิจกรรม</h4>
             </a>
             <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
@@ -73,7 +69,7 @@ layout: default-ffc
         <div class="col-sm-3  wow fadeInDown text-center animated animated" style="visibility: visible;">
 
             <a href="https://suppaluck.github.io/technique-ffc.html" class="btn btn-info btn-lg">
-                <h1>  <span class="glyphicon glyphicon-home"></span></h1>
+                <span class="glyphicon glyphicon-home text-big Yellow"></span>
                 <h4>เทคนิคทางบ้าน</h4>
             </a>
             <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
@@ -137,36 +133,67 @@ layout: default-ffc
 <div id="showe" class="content-section-b trb-showe-bg">
     <div class="content-section-b">
         <div class="container">
-            <br>
-            <br>
+
             <div class="row">
-                <h2>คุณสมบัติ</h2></center>
+                <h2>คุณสมบัติ</h2>
+                    <section class="all-features featured text-left">
+                      <div class="col-sm-4 wow fadeInLeftBig animated animated" style="visibility: visible; animation-name: fadeInLeftBig;">
+                        <div class="grid grid-3 vertical-gutters-large gallery">
+                            <div class="column colspan-1">
+                                <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:7f8161cd-b215-4f9e-b2ec-019da0df3a0f/security.svg?cdnVersion=dz" alt="" height="34">
+                                <h4>ด้านความปลอดภัย</h4>
+                                <p>มีระบบการรักษาความปลอดภัยให้ฐานข้อมูลด้วยการเข้าและถอดรหัสลับก่อนใช้งานฐานข้อมูล เพื่อความปลอดภัยสูงสุดของฐานข้อมูล</p>
+                            </div>
+                            <div class="column colspan-1">
+                              <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:c0016e9b-9ee3-4662-b5fc-18c45246d311/guest-access.svg?cdnVersion=dz" alt="" height="34">
+                                <h4>ยืนยันผู้ใช้</h4>
+                                <p>มีระบบการยืนยันผู้ใช้ที่สามารถเข้าถึงฐานข้อมูลได้ เพิ่มความปลอดภัยอีกระดับ</p>
+                            </div>
+                            <div class="column colspan-1">
+                                <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:f14dc24f-1a09-4918-86df-ecd79fe1e50a/screen-share.svg?cdnVersion=dz" alt="" height="34">
+                                <h4>การใช้งาน</h4>
+                                <p>ใช้งานร่วมกับโปรแกรมระบบงานโรงพยาบาลส่งเสริมสุขภาพตำบลและศูนย์สุขภาพชุมชน (JHCIS) ศูนย์เทคโนโลยีสารสนเทศและการสื่อสาร ได้อย่างอัตโนมัติ ด้วยโปรแกรม FFC Autosync 2011 ที่ติดตั้งไว้บนคอมพิวเตอร์แม่ข่าย (Server) </p>
+                            </div>
+                          </div>
+                        </div>
+                            <div class="col-sm-4">
+                            <div class="column colspan-1">
+                              <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:e3573d56-9e20-4c39-8900-89408d367c40/file-share.svg?cdnVersion=dz" alt="" height="34">
+                                <h4>ระบุตำแหน่ง</h4>
+                                <p>สามารถระบุตำแหน่งพิกัดหลังคาเรือนจากระบบ GPS หรือ AGPS อย่างอัตโนมัติได้</p>
+                            </div>
+                          <div class="column colspan-1">
+                               <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:0e4cb18d-c603-497a-8c4d-272b7f793c7f/unlimited-chat-rooms.svg?cdnVersion=dz" alt="" height="34">
+                                <h4>รายละเอียดผังญาติ</h4>
+                                <p>สามารถแสดงรายละเอียดข้อมูลคนในผังเครือญาติ เช่น เพศ วัย อายุ และสภาพการเป็นโรคเรื้อรังได้</p>
+                            </div>
+                            <div class="column colspan-1"> <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:68653569-7c0d-4d05-85d1-d79a04307d16/customize.svg?cdnVersion=dz" alt="" height="34">
+                                <h4>ถ่ายภาพบุคคล</h4>
+                                <p><span style="line-height: 1.6em;">สามารถถ่ายและบันทึกภาพของบุคคล และนำมาเก็บในฐานข้อมูลของโปรแกรม JHCIS ได้</span></p>
+                            </div>
+                          </div>
+                            <div class="col-sm-4">
+                            <div class="column colspan-1"> <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:72e40e72-e3d4-41a4-9198-48808464b8b4/search.svg?cdnVersion=dz" alt="" height="34">
+                                <h4>ความสัมพันธ์ฝังญาติ</h4>
+                                <p>สามารถข้ามไปดูผังเครือญาติของบุคคลที่มีความสัมพันธ์แต่ไม่มีชื่ออยู่ในทะเบียนบ้าน</p>
+                            </div>
+                            <div class="column colspan-1"> <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:72e40e72-e3d4-41a4-9198-48808464b8b4/search.svg?cdnVersion=dz" alt="" height="34">
+                                <h4>การค้นหา</h4>
+                                <p>มีระบบค้นหา รหัสวินิจฉัยโรค เพื่อสะดวกในค้นหารหัสโรค หรือ คำหลักของโรคนั้นได้ พร้อมรหัสวินิจฉัยโรคที่มีใช้งานบ่อยๆ</p>
+                            </div>
+                            <div class="column colspan-1"> <img src="https://hipchat-magnolia-cdn.atlassian.com/dam/jcr:72e40e72-e3d4-41a4-9198-48808464b8b4/search.svg?cdnVersion=dz" alt="" height="34">
+                                <h4>การค้นหา</h4>
+                                <p>มีระบบค้นหา รหัสวินิจฉัยโรค เพื่อสะดวกในค้นหารหัสโรค หรือ คำหลักของโรคนั้นได้ พร้อมรหัสวินิจฉัยโรคที่มีใช้งานบ่อยๆ</p>
+                            </div>
 
-                <div class="col-sm-6 pull-right wow fadeInRightBig animated animated" style="visibility: visible;">
-                    <img class="img-responsive " src="/img/FFC.jpg">
-                </div>
-                <div class="col-sm-6 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
-                    <p class="lead lead-dark" style="color:white;">
-                        <ul>
-                            <li>มีระบบการรักษาความปลอดภัยให้ฐานข้อมูลด้วยการเข้าและถอดรหัสลับก่อนใช้งานฐานข้อมูล เพื่อความปลอดภัยสูงสุดของฐานข้อมูล</li>
-                            <li>มีระบบการยืนยันผู้ใช้ที่สามารถเข้าถึงฐานข้อมูลได้ เพิ่มความปลอดภัยอีกระดับ</li>
-                            <li>ใช้งานร่วมกับโปรแกรมระบบงานโรงพยาบาลส่งเสริมสุขภาพตำบลและศูนย์สุขภาพชุมชน (JHCIS)</li>
-                            <li>สามารถระบุตำแหน่งพิกัดหลังคาเรือนจากระบบ GPS หรือ AGPS อย่างอัตโนมัติได้</li>
-                            <li>สามารถเพิ่ม แก้ไข ลบ ค้นหา ตำแหน่งพิกัดของหลังคาบ้านบนแผนที่ Google map ได้</li>
-                            <li>สามารถดูข้อมูลสภาวะความเป็นโรคเรื้อรังของบุคคลในบ้านบนแผนที่ได้</li>
-                            <li>สามารถสร้างผังเครือญาติ (Genogram) ในรูปแบบกราฟฟิก โดยมีจุดศูนย์กลางที่เจ้าบ้านได้ ๔ รุ่นอายุคน</li>
-                            (หนึ่งรุ่นอายุคนก่อนเจ้าบ้าน สองรุ่นอายุคนหลังเจ้าบ้าน) จากฐานข้อมูลของโปรแกรม JHCIS ได้อย่างอัตโนมัติ
-                        </ul>
-
-                        <a href="https://suppaluck.github.io/property-ffc">
-                            <p>อ่านต่อ >>>
-                            </p>
-                        </a>
-                    </p>
-                    <br>
-
+                        </div>
+                    </section>
                 </div>
             </div>
+          </section>
+        </div>
+      </div>
+
             <!-- /.container -->
         </div>
         <br>
